--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node ./app",
+    "dev": "nodemon ./app",
     "test": "jest --watchAll",
     "dev-test": "nodemon dev-test"
   },
@@ -15,6 +17,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1"
+    "crypto-js": "^3.1.9-1",
+    "express": "^4.16.4"
   }
 }
